and more scalable, and the new APIs give developers control and
introspection over Mason's inner workings.
L{Devel/component and request objects}
- Reorganized documentation to accommodate new classes: created
Request.pod and Component.pod, and moved component developer's guide
(previously at Components.pod) to Devel.pod to avoid
confusion. L{Devel/component and request objects}
- New <%def> section defines a subcomponent embedded inside a larger
component.  This allows repeated code and HTML to be modularized
without affecting the global component namespace.
L{Devel/e&lt%defe&gt;}
- <%args> section now accommodates optional comments for declarations
L{Devel/e&lt%argse&gt;}
- Interp::exec is now re-entrant with all request specific information
having been moved to Request class.
- ** Reworked Parser API. parse is now called make_component, has a
simplified set of options, and returns a component object
directly. make is now called make_dirs. L{Parser/item_make_component}
L{Parser/item_make_dirs}
- Dhandlers, which formerly worked only in mod_perl mode, now work in
stand-alone mode as well
- Autohandler and dhandler file names are now configurable
L{Interp/autohandler_name} L{Interp/dhandler_name}
- Removed obsolete and undocumented Interp::vars and mc_var functions

0.6.1  Tue Jul 27 09:34:31 PDT 1999

- Added warnings to convert-0.6.pl about occasional erroneous
component call syntax conversions (reported by Oleg Bartunov)
- Fixed conversion of <% mc_comp("/foo/$bar") %> (reported by Oleg
Bartunov)
- Fixed cache access under high concurrencies (reported by Oleg
Bartunov)
- Fixed uppercase <%PERL>, broken in 0.6 (reported by Daniel L. Jones)
- Fixed mc_suppress_http_header(0), broken in 0.6 (reported by Jim
Mortko)

0.6  Fri Jul 16 08:09:27 PDT 1999

- New <& &> tag provides a more convenient way to call components
inside HTML. mc_comp still works. L{Devel/components that output html}
- The "perl_" prefix has been eliminated from section names: now